--- a/exercise/style.css
+++ b/exercise/style.css
@@ -22,6 +22,8 @@ h1 {
   letter-spacing: 0em;
 }
 
+/* section-1 */
+
 .section-1 {
   background-color: #c5e6f9;
   height: 500px;
@@ -116,6 +118,8 @@ button {
   color: #3182ce;
 }
 
+/* section-2 */
+
 .section-2 {
   height: 700px;
   width: 100%;
@@ -161,6 +165,8 @@ td {
 .sec2-b {
   display: inline-block;
 }
+
+/* section-3 */
 
 .section-3 {
   background-color: #f7fafc;
@@ -223,4 +229,60 @@ td {
   height: 4px;
   border: 0;
   margin: 10px auto;
+}
+
+/* section-4 */
+
+.section-4 {
+  background-color: #3182ce;
+  height: 520px;
+}
+
+.section-4 > div {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.section-4 > :last-child {
+  text-align: center;
+  padding: 60px 180px;
+}
+
+.section-4 > div > h1,
+p {
+  color: white;
+  margin: 30px 0;
+}
+
+.subscribe {
+  width: 500px;
+  height: 55px;
+  border-radius: 1000px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 5px;
+  padding-left: 20px;
+}
+
+.section-4 > div > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe > button {
+  position: relative;
+  width: 120px;
+  background: #3182ce;
+}
+
+.subscribe > img {
+  margin-right: 10px;
+}
+
+.subscribe > input {
+  width: 290px;
+  border: 0;
 }
